2002-10-26  Paolo Bonzini  <bonzini@gnu.org>

	* po/*.po: updated from Translation Project

2001-10-19  gettextize  <bug-gnu-utils@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.10.40.
	* cat-id-tbl.c: Remove file.
	* stamp-cat-id: Remove file.

2001-03-02  Paolo Bonzini  <bonzini@gnu.org>

	* po/it.po: updated
	* po/sed.pot: likewise.
	
2000-12-10  Paolo Bonzini  <bonzini@gnu.org>

	* po/it.po: Italian translation reviewed for new POT file.
	* po/sed.pot: updated

Mon Mar 15 16:25:53 PST 1999  Ken Pizzini <ken@gnu.org>

	* po/it.po: new translation file.

Sun Feb  7 21:22:17 PST 1999  Ken Pizzini <ken@gnu.org>

	* po/de.po: new translation file.

Sat Dec 12 11:18:55 PST 1998  Ken Pizzini <ken@gnu.org>

	* po/ru.po: new translation file.

Sun Dec  6 00:51:23 PST 1998  Ken Pizzini <ken@gnu.org>

	* po/fr.po: new translation file.

Sun Aug 16 02:59:20 PDT 1998  Ken Pizzini <ken@gnu.org>

	* sed/compile.c: added N_() markers and corresponding gettext()
	  (er, _()) calls.
	* po/sed.pot: updated to reflect changed and newly marked text.

1998-07-24  Erick Branderhorst  <Erick.Branderhorst@asml.nl>

	* po/nl.po: Dutch translation.