@@ -1,3 +1,7 @@
+2004-11-02  gettextize  <bug-gnu-utils@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.10.40.
+
 2002-10-26  Paolo Bonzini  <bonzini@gnu.org>
 
 	* po/*.po: updated from Translation Project
